@@ -2,48 +2,72 @@ package ru.alabra.voting.web.json;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectReader;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 
 import java.io.IOException;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-import static ru.alabra.voting.web.json.JacksonObjectMapper.getMapper;
-
+@Component
 public class JsonUtil {
+    private final ObjectMapper objectMapper;
 
-    public static <T> List<T> readValues(String json, Class<T> clazz) {
-        ObjectReader reader = getMapper().readerFor(clazz);
-        try {
-            return reader.<T>readValues(json).readAll();
-        } catch (IOException e) {
-            throw new IllegalArgumentException("Invalid read array from JSON:\n'" + json + "'", e);
-        }
+    @Autowired
+    public JsonUtil(ObjectMapper objectMapper) {
+        this.objectMapper = objectMapper;
     }
 
-    public static <T> T readValue(String json, Class<T> clazz) {
-        try {
-            return getMapper().readValue(json, clazz);
-        } catch (IOException e) {
-            throw new IllegalArgumentException("Invalid read from JSON:\n'" + json + "'", e);
-        }
+    public <T> String writeIgnoreProps(Collection<T> collection, String... ignoreProps) {
+        List<Map<String, Object>> list = collection.stream()
+                .map(e -> getAsMapWithIgnore(e, ignoreProps))
+                .collect(Collectors.toList());
+
+        return writeValue(list);
     }
 
-    public static <T> String writeValue(T obj) {
+    public <T> String writeIgnoreProps(T obj, String... ignoreProps) {
+        Map<String, Object> map = getAsMapWithIgnore(obj, ignoreProps);
+
+        return writeValue(map);
+    }
+
+    public <T> String writeValue(T obj) {
         try {
-            return getMapper().writeValueAsString(obj);
+            return objectMapper.writeValueAsString(obj);
         } catch (JsonProcessingException e) {
             throw new IllegalStateException("Invalid write to JSON:\n'" + obj + "'", e);
         }
     }
 
-    public static <T> String writeAdditionProps(T obj, String addName, Object addValue) {
-        return writeAdditionProps(obj, Map.of(addName, addValue));
+    public <T> String writeAdditionProps(T obj, String addName, Object addValue) {
+        return writeAdditionProps(obj, Collections.singletonMap(addName, addValue));
     }
 
-    public static <T> String writeAdditionProps(T obj, Map<String, Object> addProps) {
-        Map<String, Object> map = getMapper().convertValue(obj, new TypeReference<Map<String, Object>>() {});
+    public <T> String writeAdditionProps(T obj, Map<String, Object> addProps) {
+        Map<String, Object> map = objectMapper.convertValue(obj, new TypeReference<Map<String, Object>>() {});
         map.putAll(addProps);
         return writeValue(map);
+    }
+
+    public <T> T readValue(String json, Class<T> clazz) {
+        try {
+            return objectMapper.readValue(json, clazz);
+        } catch (IOException e) {
+            throw new IllegalArgumentException("Invalid read from JSON:\n'" + json + "'", e);
+        }
+    }
+
+    private <T> Map<String, Object> getAsMapWithIgnore(T obj, String[] ignoreProps) {
+        Map<String, Object> map = objectMapper.convertValue(obj, new TypeReference<Map<String, Object>>() {});
+        for (String prop : ignoreProps) {
+            map.remove(prop);
+        }
+
+        return map;
     }
 }
